--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "PyPlotUtility"
 uuid = "2372c442-b35b-4f55-9072-8f560a2e4af6"
 authors = ["LudwigBoess <lboess@usm.lmu.de>"]
 version = "0.1.0"
+
+[deps]
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
