--- a/Project.toml
+++ b/Project.toml
@@ -10,8 +10,10 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 SPHtoGrid = "8a806948-229a-4117-b79b-c12ac366026f"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-SPHtoGrid = ">=0.3"
 Cosmology = ">=1"
+Unitful = ">=1"
+SPHtoGrid = ">=0.3"
 julia = ">=1.6"
