--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 Cosmology = "76746363-e552-5dba-9a5a-cef6fa9cc5ab"
 Healpix = "9f4e344d-96bc-545a-84a3-ae6b9e1b672b"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
