--- a/Project.toml
+++ b/Project.toml
@@ -13,8 +13,10 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 SPHtoGrid = "8a806948-229a-4117-b79b-c12ac366026f"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
-Cosmology = ">=1"
-Unitful = ">=1"
-julia = ">=1.6"
+Cosmology = "1"
+SPHtoGrid = "0.4, 0.5"
+Unitful = "1"
+julia = "1.6"
